# shrinkpath

./: Cargo.toml  LICENSE-APACHE  README.md  deny.toml  renovate.json
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: fs_aware.rs  lib.rs  main.rs  path_info.rs  platform.rs
src/strategy/: ellipsis.rs  fish.rs  hybrid.rs  mod.rs  unique.rs
