[package]
name = "shrinkpath"
version = "0.1.0"
edition = "2021"
description = "Smart cross-platform path shortening for CLIs, prompts, and tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecurityRonin/shrinkpath"
homepage = "https://github.com/SecurityRonin/shrinkpath"
readme = "README.md"
keywords = ["path", "shorten", "cli", "prompt", "filesystem"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.70"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]
fs = []

[[bin]]
name = "shrinkpath"
required-features = ["cli"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
